fix callback dark mode background (#307)
* fix callback darkmode background

* Update styles.css

* Create hip-bikes-hug.md

--- a/packages/docusaurus-theme-redoc/src/theme/Redoc/styles.css
+++ b/packages/docusaurus-theme-redoc/src/theme/Redoc/styles.css
@@ -126,6 +126,21 @@ html[data-theme='dark']
   background-color: var(--ifm-background-color);
 }
 
+/* Fixes https://github.com/rohit-gohri/redocusaurus/issues/306 */
+html[data-theme='dark'] 
+  .redocusaurus 
+  div[id^='tag']
+  button:has(span):has(.operation-type) {
+  background-color: var(--ifm-color-gray-800);
+}
+
+html[data-theme='dark'] 
+  .redocusaurus 
+  div[id^='tag'] 
+  button + div {
+  background-color: var(--ifm-color-emphasis-0);
+}
+
 /* Padding above Response Samples heading */
 .redocusaurus .react-tabs__tab-panel--selected {
   margin-bottom: 10px;
